// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupsElement helpers getInitialGroups should return a list of SearchResult objects if passed a truthy 'groups' prop 1`] = `
Array [
  Object {
    "id": "23ff7152-b588-43e4-90de-fda77aeaf7c0",
    "name": "Customers",
  },
  Object {
    "id": "2429d573-80d7-47f8-879f-f2ba442a1bfd",
    "name": "Unsatisfied Customers",
  },
  Object {
    "id": "cdbf9e01-aaa7-4381-8259-ee042447bcac",
    "name": "Early Adopters",
  },
  Object {
    "id": "afaba971-8943-4dd8-860b-3561ed4f1fe1",
    "name": "Testers",
  },
  Object {
    "id": "33b28bac-b588-43e4-90de-fda77aeaf7c0",
    "name": "Subscribers",
  },
]
`;

exports[`GroupsElement helpers getInitialGroups should return an empty list if passed a falsy 'groups' prop 1`] = `Array []`;

exports[`GroupsElement helpers getInitialGroups should return localGroups list if GroupsElement passed 'localGroups' prop but not 'groups' prop 1`] = `
Array [
  Object {
    "id": "23ff7152-b588-43e4-90de-fda77aeaf7c0",
    "name": "Customers",
  },
  Object {
    "id": "2429d573-80d7-47f8-879f-f2ba442a1bfd",
    "name": "Unsatisfied Customers",
  },
  Object {
    "id": "cdbf9e01-aaa7-4381-8259-ee042447bcac",
    "name": "Early Adopters",
  },
  Object {
    "id": "afaba971-8943-4dd8-860b-3561ed4f1fe1",
    "name": "Testers",
  },
  Object {
    "id": "33b28bac-b588-43e4-90de-fda77aeaf7c0",
    "name": "Subscribers",
  },
]
`;

exports[`GroupsElement render should pass createOptions object if it's add prop is true 1`] = `
<FormElement
  errors={Array []}
  name="Groups"
>
  <SelectSearch
    _className=""
    createNewOption={[Function]}
    createPrompt="New group: "
    initial={Array []}
    isValidNewOption={[Function]}
    multi={true}
    name="Groups"
    onChange={[Function]}
    placeholder="Enter the name of an existing group..."
    resultType="group"
    searchPromptText="Invalid group name"
    url="/assets/groups.json"
  />
</FormElement>
`;

exports[`GroupsElement render should render self, children with required props 1`] = `
<FormElement
  errors={Array []}
  name="Groups"
>
  <SelectSearch
    _className=""
    initial={Array []}
    multi={true}
    name="Groups"
    onChange={[Function]}
    placeholder="Enter the name of an existing group..."
    resultType="group"
    searchPromptText="Invalid group name"
    url="/assets/groups.json"
  />
</FormElement>
`;
